--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"express-ejs-layouts": "^2.5.1",
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
-		"mongoose": "^6.0.12"
+		"mongoose": "^6.0.12",
+		"multer": "^1.4.3"
 	},
 	"devDependencies": {
 		"dotenv": "^10.0.0",
