--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
 		"mongoose": "^6.0.12",
-		"multer": "^1.4.3"
+		"multer": "^1.4.3",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"dotenv": "^10.0.0",
