--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"method-override": "^3.0.0",
 		"mongoose": "^6.0.12",
 		"multer": "^1.4.3",
+		"popups": "^1.1.3",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
